upload to github

--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,6 @@ fabric.properties
 # Support for Project snippet scope
 
 # End of https://www.toptal.com/developers/gitignore/api/jupyternotebooks,pycharm,visualstudiocode
+
+
+__pycache__
